# tinygpt

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: benchmark_attention.py  main.py
src/tinygpt/: __init__.py  attention_head.py  batched_multi_attention_layer.py  generate.py  gpt2.py  multi_attention_head.py  multi_attention_layer.py  transformer_block.py  utils.py
tests/: test_multi_attention_layer.py  test_utils.py
